# celeritas-core

./: .clang-format  .gitignore  404.html  Makefile  README.md  TODO.md  default_scene.json  doxyfile  guiding_principles.md  index.html  mkdocs.yaml  scratchpad.md  xmake.lua
.github/workflows/: continuous-workflow.yml
Contributing/c-coding-style/: index.html
Contributing/naming/: index.html
archive/: xmake.lua
archive/src/: animation.h  collision.c  empty.c  log.c  physics.h  transform_hierarchy.c  transform_hierarchy.h
assets/shaders/: blinn_phong.frag  blinn_phong.vert  (+30 more)
bindgen/: BINDGEN.md
bindgen/rust/: Cargo.toml  README.md  build.rs
bindgen/rust/celeritas-sys/: Cargo.toml  build.rs
bindgen/rust/celeritas-sys/examples/: glfw.rs  main_loop.rs  scene.rs
bindgen/rust/celeritas-sys/src/: lib.rs
bindgen/rust/examples/: glfw.rs  gui_test.rs  main_loop.rs  scene.rs  shaders.rs
bindgen/rust/src/: egui_utils.rs  lib.rs  prelude.rs  ral.rs  resources.rs  shader.rs
docs/: getting-started.md  index.md  project-layout.md  rendering.md  using-celeritas.md
editor/: Cargo.toml  build.rs
examples/: README.md  cube.c  example_scene.h  first.c  triangle.c
getting-started/: index.html
include/: amalgamation.h  celeritas.h
new_src/: backend_vk.c  core.c  frustum.c
project-layout/: index.html
rendering/: index.html
scripts/: gen_amalgamation.sh  gen_apidocs.sh  header_check.sh
search/: search_index.json
src/: animation.c  animation.h  backend_mtl.m  camera.c  camera.h  celeritas.c  collision.h  colours.h  core.c  core.h  debug_strings.c  defines.h  empty.c  geometry.c  impl.c  log.c  log.h  maths.c  mem.c  physics.h  ral.c  scene.c  scene.h  transform_hierarchy.c  transform_hierarchy.h
tests/: arena_tests.c  pool_test_runner.c  pool_tests.c
using-celeritas/: index.html
(+232 files in other folders)
